[project]
name = "mvid"
version = "0.1.1"
description = "Simple video reading"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Adam Alcolado", email = "adam.alcolado@mtl.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "av",
    "numpy"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "tqdm",
    "pillow"
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.urls]
GitHub = "https://github.com/mtl-ai/mvid"